# hello

./: .gitignore  README.md  and_res_guard.gradle  aspectjx_excludes.gradle  build.gradle  clean.sh  common.gradle  config.gradle  gradle.properties  hello  hello_nexus.jks  release.sh  settings.gradle
app/: app.deps.txt  build.gradle  framework_deps.txt  modules_deps.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test_scheme.html
base/module_common/: build.gradle
base/module_common/src/main/: AndroidManifest.xml
base/module_service/: build.gradle
flutter_module/: .metadata  pubspec.yaml
flutter_module/lib/: main.dart
framework/: README.md  common.gradle
framework/module_common/: build.gradle
framework/module_common/src/main/: AndroidManifest.xml
framework/module_compiler/: README.md  build.gradle
framework/module_core/: build.gradle
framework/module_core/src/main/: AndroidManifest.xml
framework/module_core/src/main/cpp/: CMakeLists.txt  lamemp3-lib.cpp  mp3lame-lib.cpp  mp3lame-lib.h
framework/module_im/: build.gradle
framework/module_im/src/main/: AndroidManifest.xml
framework/module_kit/: build.gradle
framework/module_kit/src/main/: AndroidManifest.xml
framework/module_resources/: build.gradle
framework/module_router/: build.gradle
framework/module_service/: build.gradle
framework/module_service/objectbox-models/: default.json  default.json.bak
framework/module_widget/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
module_common/: build.gradle
module_libs/lib_ffmpeg/: README.md  build.gradle
module_libs/lib_picture_selector/: build.gradle  picture_library-v2.6.0.aar
module_libs/lib_watermark/: build.gradle
module_service/: build.gradle
module_service/src/main/: AndroidManifest.xml
module_user/: build.gradle
module_user/src/main/: AndroidManifest.xml
modules/module_main/: build.gradle
schemas/: objectbox-models.json  objectbox-models.json.bak
(+1069 files in other folders)
